--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ body {
 }
 
 .loginAndRegister{
-    margin-top: 100px;
+    display: flex;
+    margin: 100 0 0 100px;
 }
 
 .Login{  
@@ -71,7 +72,6 @@ body {
     margin: auto;  
     margin: 20 0 0 450px;  
     padding: 80px;   
-    border-radius: 15px ;  
     background-color: grey;
       
 }  
@@ -82,7 +82,6 @@ body {
     margin: auto;  
     margin: 20 0 0 450px;  
     padding: 80px;   
-    border-radius: 15px ;
     background-color: grey;  
 }
 
@@ -134,6 +133,14 @@ Label{
     padding-left: 7px;  
     color: black;  
 }  
+
+.loginbox{
+    margin-left: 10%;
+}
+
+.registerbox{
+    margin-left: 10%;
+}
 
 @media screen and (min-width: 700px) {
     .topbar ul{
