--- a/homeStyle.css
+++ b/homeStyle.css
@@ -5,11 +5,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0px;
     margin: 0px;
+
 }
 
 .nav {
+    height: 40px;
+    padding: 0px 0px 30px 0px;
     text-align: right;
     background-color: #D9D9D9;
+    overflow: hidden;
+    
 }
 
 #loginButton:hover {
@@ -20,11 +25,9 @@ body {
 #loginButton {
     width: 100px;
     height: 40px;
-    border-radius: 10px;
-    margin: none;
-    margin-right: 50px;
     margin-top: 20px;
-    margin-bottom: 20px;
+    border-radius: 10px;
+    margin-right: 50px;
     background-color: white;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -33,24 +36,29 @@ body {
 #homeButton {
     width: 100px;
     height: 40px;
+    margin-right: 2%;
     border-radius: 10px;
-    margin: none;
-    margin-right: 30px;
-    margin-top: 20px;
-    margin-bottom: 20px;
     background-color: white;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+#homeButton:hover {
+    background-color: grey;
+    color: lightgray;
+}
+
+#booksButton:hover {
+    background-color: grey;
+    color: lightgray;
+}
+
 #booksButton {
     width: 100px;
     height: 40px;
-    border-radius: 10px;
-    margin: none;
-    margin-right: 60%;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-right: 60%;
+    border-radius: 10px;
     background-color: white;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -59,7 +67,9 @@ body {
 #searchBox {
     width: 400px;
     height: 40px;
+    margin-top: 20px;
     margin-right: 150px;
+    margin-bottom: 5px;
     border-radius: 10px;
     border: none;
     padding-left: 10px;
