--- a/homeStyle.css
+++ b/homeStyle.css
@@ -11,9 +11,8 @@ body {
 .nav {
     height: 40px;
     padding: 0px 0px 30px 0px;
-    text-align: right;
     background-color: #D9D9D9;
-    overflow: hidden;
+    overflow: visible;
     
 }
 
@@ -27,7 +26,6 @@ body {
     height: 40px;
     margin-top: 20px;
     border-radius: 10px;
-    margin-right: 50px;
     background-color: white;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -36,7 +34,7 @@ body {
 #homeButton {
     width: 100px;
     height: 40px;
-    margin-right: 2%;
+    margin-left: 5px;
     border-radius: 10px;
     background-color: white;
     border: none;
@@ -57,7 +55,8 @@ body {
     width: 100px;
     height: 40px;
     margin-top: 20px;
-    margin-right: 60%;
+    margin-left: 10px;
+    margin-right: 55px;
     border-radius: 10px;
     background-color: white;
     border: none;
@@ -68,7 +67,6 @@ body {
     width: 400px;
     height: 40px;
     margin-top: 20px;
-    margin-right: 150px;
     margin-bottom: 5px;
     border-radius: 10px;
     border: none;
