buttons now change color on hover on login page

--- a/loginStyle.css
+++ b/loginStyle.css
@@ -87,6 +87,11 @@ Label{
     color: black;  
 }  
 
+#button:hover {
+    background-color: grey;
+    color: white;
+}
+
 .signupText{
     text-align: center;
 }
