--- a/homeStyle.css
+++ b/homeStyle.css
@@ -12,7 +12,7 @@ body {
     height: 40px;
     padding: 0px 0px 30px 0px;
     background-color: #D9D9D9;
-    overflow: visible;
+    overflow: hidden;
     
 }
 
@@ -22,9 +22,10 @@ body {
 }
 
 #loginButton {
-    width: 100px;
+    width: 7%;
     height: 40px;
     margin-top: 20px;
+    margin-left: 8%;
     border-radius: 10px;
     background-color: white;
     border: none;
@@ -32,9 +33,9 @@ body {
 }
 
 #homeButton {
-    width: 100px;
+    width: 7%;
     height: 40px;
-    margin-left: 5px;
+    margin-left: 10px;
     border-radius: 10px;
     background-color: white;
     border: none;
@@ -52,11 +53,11 @@ body {
 }
 
 #booksButton {
-    width: 100px;
+    width: 7%;
     height: 40px;
     margin-top: 20px;
     margin-left: 10px;
-    margin-right: 55px;
+    margin-right: 5%;
     border-radius: 10px;
     background-color: white;
     border: none;
@@ -64,10 +65,11 @@ body {
 }
 
 #searchBox {
-    width: 400px;
+    width: 30%;
     height: 40px;
     margin-top: 20px;
     margin-bottom: 5px;
+    margin-left: 30%;
     border-radius: 10px;
     border: none;
     padding-left: 10px;
