--- a/client/signupStyle.css
+++ b/client/signupStyle.css
@@ -2,6 +2,14 @@ body {
     background-color: rgba(245, 122, 7, 0.5);
 }
 
+/* .page{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
 .Register {
     border: 1px solid #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -14,9 +22,12 @@ body {
     padding-bottom: 132px;
     background-color: white;
     position: relative;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    font-family: arial;
 }
 
-.registerLabel {
+h1 {
     color: black;
     font-size: 30px;
     text-align: center;
@@ -43,12 +54,16 @@ Label{
     margin: 40px 30%;
 }
 
-input[type=text] {
+input {
     width: 350px;  
     height: 30px;  
     border: 1px solid black;  
     border-radius: 10px; 
     padding-left: 8px; 
+}
+
+input:focus {
+    outline-color: rgb(32,177,255);
 }
 
 input[name=signUpButton] {
@@ -78,15 +93,11 @@ input[name=backButton] {
 #button:hover {
     background-color: grey;
     color: white;
+    transition: 0.4s;
+    transform: scale(1.25);
 }
 
 .buttons {
     width: 100%;
     height: 40px;
-}
-
-.registerbox {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    font-family: arial;
 }
