--- a/client/signupStyle.css
+++ b/client/signupStyle.css
@@ -66,7 +66,7 @@ input:focus {
     outline-color: rgb(32,177,255);
 }
 
-input[name=signUpButton] {
+input[id=signupButton] {
     width: 186px;
     height: 40px;
     margin-left: 230px;
@@ -78,7 +78,7 @@ input[name=signUpButton] {
     color: black;
 }
 
-input[name=backButton] {
+input[id=backButton] {
     width: 186px;
     height: 40px;
     margin-left: 150px;
@@ -90,11 +90,11 @@ input[name=backButton] {
     color: black;
 }
 
-#button:hover {
+input[name=button]:hover {
     background-color: grey;
     color: white;
     transition: 0.4s;
-    transform: scale(1.25);
+    transform: scale(1.1);
 }
 
 .buttons {
