--- a/client/loginStyle.css
+++ b/client/loginStyle.css
@@ -19,6 +19,12 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.loginbox{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    font-family: arial;
+}
+
 .Login{  
     border: 1px solid #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -30,7 +36,6 @@ body {
     padding-top: 40px; 
     padding-bottom: 132px;   
     background-color: white;
-      
 }  
 
 .loginLabel{  
@@ -44,6 +49,12 @@ Label{
     font-size: 17px;
 }  
 
+.errorMessage {
+    text-align: center;
+    color: red;
+    margin-top: 10px;
+}
+
 .Username {
     margin: 20px 29% 20px;
 }
@@ -54,6 +65,10 @@ Label{
 
 .Remember {
     margin-left: 260px;
+}
+
+input:focus {
+    outline-color: rgb(32,177,255);
 }
 
 #username{  
@@ -94,10 +109,4 @@ Label{
 
 .signupText{
     text-align: center;
-}
-
-.loginbox{
-    margin-top: 100px;
-    margin-bottom: 100px;
-    font-family: arial;
 }
