--- a/client/forgotPassStyle.css
+++ b/client/forgotPassStyle.css
@@ -41,9 +41,9 @@ body {
     padding: 0.25rem;
     border-radius: 4px;
     outline: none;
-    border: 1px solid blue;
+    border: 1px solid #1454ca;
     color: white;
-    background-color: blue;
+    background-color: #1454ca;
 }
 
 .formButton:hover {
