--- a/client/forgotPassStyle.css
+++ b/client/forgotPassStyle.css
@@ -14,8 +14,13 @@ body {
     margin: 1rem;
 }
 
+h1 {
+    font-size: 2.5rem;
+}
+
 .instructions {
     margin: 1rem 0;
+    font-size: 1.5rem;
 }
 
 .inputBlock {
@@ -28,6 +33,7 @@ body {
     padding: 0.5rem;
     border-radius: 4px;
     border: 1px solid;
+    font-size: 1rem;
 }
 
 .buttonContainer {
@@ -44,6 +50,7 @@ body {
     border: 1px solid #1454ca;
     color: white;
     background-color: #1454ca;
+    font-size: 1.25rem;
 }
 
 .formButton:hover {
