--- a/client/AddBookStyle.css
+++ b/client/AddBookStyle.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(245, 122, 7, 0.5);
+    background-color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -20,13 +20,13 @@ body {
 .Labels {
     display: inline-flex;
     width: 100%;
-    margin: 10px 20% 10px; 
+    margin: 10px 10% 10px; 
 }
 
 .Inputs {
     display: inline-flex;
-    width: 100%;
-    margin: 10px 20% 10px; 
+    justify-content: space-between;
+    margin: 10px 10% 10px; 
 }
 
 .BookCategory {
@@ -34,19 +34,17 @@ body {
 }
 
 #BookName {
-    width: 25%; 
+    width: 300px;  
     height: 30px;  
     border: 1px solid black;  
-    border-radius: 10px; 
     padding-left: 8px; 
 }
 
 #BookCategory {
     margin-left: 12%;
-    width: 25%; 
+    width: 300px; 
     height: 30px;  
     border: 1px solid black;  
-    border-radius: 10px; 
     padding-left: 8px; 
 }
 
@@ -55,19 +53,17 @@ body {
 }
 
 #BookAuthor {
-    width: 25%; 
+    width: 300px;  
     height: 30px;  
     border: 1px solid black;  
-    border-radius: 10px; 
     padding-left: 8px; 
 }
 
 #BookISBN {
     margin-left: 12%;
-    width: 25%; 
+    width: 300px;  
     height: 30px;  
     border: 1px solid black;  
-    border-radius: 10px; 
     padding-left: 8px; 
 }
 
@@ -76,29 +72,26 @@ body {
 }
 
 #BookPrice {
-    width: 25%; 
+    width: 300px;  
     height: 30px;  
     border: 1px solid black;  
-    border-radius: 10px; 
     padding-left: 8px; 
 }
 
 .AddBookContainer {
-    border: 1px solid #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
     width: 900px;
     overflow: hidden;
     margin: auto;
     margin-top: 5%;
     padding-top: 40px;
     padding-bottom: 5%;
-    background-color: white;
+    background-color: #f2f2f2;
     position: relative;
 }
 
 .AddCoverContainer {
-    margin-left: 12%;
+    width: 400px;
+    margin-left: 18%;
     display: flex;
 }
 
