--- a/my-react-app/src/components/CSS/home.module.css
+++ b/my-react-app/src/components/CSS/home.module.css
@@ -1,6 +1,6 @@
 .CategoryLabel{
-    font-size: 40px;
-    margin-left: 100px;
+    font-size: 50px;
+    margin-left: 200px;
 }
 
 .PopularLabel {
@@ -9,14 +9,15 @@
 }
 
 .Categories {
-    margin:0px 70px 0px;
     display: flex;
-    width: 90%;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin: 0 10% 0;
 }
 
 .CategoryImage{
-    width: 100%;
-    height: 100%;
     padding: 10px 15px
+}
+
+.CategoryImage:hover {
+    cursor: pointer;
 }
