--- a/my-react-app/src/components/CSS/nav.module.css
+++ b/my-react-app/src/components/CSS/nav.module.css
@@ -29,6 +29,10 @@
     padding: 10px 15px
 }
 
+.items:hover {
+    cursor: pointer;
+}
+
 #searchBox {
     width: 500px;
     height: 50px;
@@ -50,5 +54,9 @@
 }
 
 .loginButton:hover {
+    cursor: pointer;
+}
+
+.name:hover {
     cursor: pointer;
 }
