--- a/my-react-app/src/components/CSS/nav.module.css
+++ b/my-react-app/src/components/CSS/nav.module.css
@@ -6,7 +6,7 @@
 
 .nav {
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font: 500 1rem 'Outfit', sans-serif;
     font-size: 20px;
     display: flex;
     justify-content: space-between;
@@ -14,7 +14,6 @@
     border-bottom: solid black 2px;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
 
