--- a/my-react-app/src/components/CSS/forgotPassword.module.css
+++ b/my-react-app/src/components/CSS/forgotPassword.module.css
@@ -1,21 +1,24 @@
 .formBody {
     /* margin: 5% 0 0 5%; */
     margin: 0;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
-    justify-content: left;
+    justify-content: center;
     font-size: 18px;
     font: 500 1rem 'Outfit', sans-serif;
 }
 
 .formContainer {
-    width: 60%;
-    max-width: 60%;
+    width: 800px;
+    max-width: 800px;
     margin: 1rem;
+    padding: 2rem;
+    background: rgb(242,242,242,1);
 }
 
 .formTitle {
     font-size: 2.5rem;
+    text-align: center;
 }
 
 .instructions {
@@ -31,9 +34,15 @@
     display: block;
     width: 98%;
     padding: 0.5rem;
-    border-radius: 4px;
-    border: 1px solid;
-    font-size: 1rem;
+    border-radius: 8px;
+    border: 2px solid;
+    outline: none;
+    font-size: 1.1rem;
+    transition: border-color 0.2s;
+}
+
+.formInput:focus {
+    border-color: #1454ca;
 }
 
 .buttonContainer {
@@ -41,11 +50,11 @@
 }
 
 .formButton {
-    width: 8rem;
+    width: 10rem;
     justify-content: center;
     text-align: center;
-    padding: 0.25rem;
-    border-radius: 4px;
+    padding: 0.5rem;
+    border-radius: 6px;
     outline: none;
     border: 1px solid #1454ca;
     color: white;
@@ -55,8 +64,10 @@
 
 .formButton:hover {
     cursor: pointer;
+    transition: 0.4s;
+    transform: scale(1.1);
 }
 
 .formButton:active {
-    transform: scale(0.97);
+    transform: scale(1);
 }
