--- a/my-react-app/src/components/CSS/forgotPassword.module.css
+++ b/my-react-app/src/components/CSS/forgotPassword.module.css
@@ -1,19 +1,27 @@
 .formBody {
     /* margin: 5% 0 0 5%; */
     margin: 0;
-    /* height: 100vh; */
+    height: 100vh;
     display: flex;
     justify-content: center;
     font-size: 18px;
     font: 500 1rem 'Outfit', sans-serif;
+    background-image: url("opaque-library-image.png");
+    background-position: center;
+    background-size: cover;
 }
 
 .formContainer {
-    width: 800px;
-    max-width: 800px;
+    width: 850px;
+    max-width: 850px;
     margin: 1rem;
     padding: 2rem;
+}
+
+.form {
+    padding: 2rem;
     background: rgb(242,242,242,1);
+    border-radius: 5px;
 }
 
 .formTitle {
@@ -47,6 +55,7 @@
 
 .buttonContainer {
     text-align: right;
+    margin-bottom: 2rem;
 }
 
 .formButton {
