--- a/my-react-app/src/components/CSS/login.module.css
+++ b/my-react-app/src/components/CSS/login.module.css
@@ -6,16 +6,24 @@ body {
 
 .formBody {
     display: flex;
-    align-items: center;
     justify-content: center;
+    height: 100vh;
+    background-image: url("opaque-library-image.png");
+    background-position: center;
+    background-size: cover;
 }
 
 .formContainer{
-    width: 400px;
-    max-width: 400px;
+    width: 450px;
+    max-width: 450px;
     margin: 1rem;
     padding: 2rem;
+}
+
+.form {
     background: rgb(242,242,242,1);
+    padding: 2rem;
+    border-radius: 5px;
 }
 
 .hiddenForm {
