--- a/my-react-app/src/components/CSS/home.module.css
+++ b/my-react-app/src/components/CSS/home.module.css
@@ -21,3 +21,9 @@
 .CategoryImage:hover {
     cursor: pointer;
 }
+
+.Books {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 10% 0;
+}
