--- a/my-react-app/src/components/CSS/book.module.css
+++ b/my-react-app/src/components/CSS/book.module.css
@@ -5,14 +5,12 @@
     padding: 30px 10px 20px;
     margin: 10px 20px 10px;
     align-items: center;
-    width: 320px;
-    height: 500px;
 }
 .Books {
     margin: 0px 70px 0px;
 }
 .Book {
     display: flex;
-    width: 100%;
-    height: 100%;
+    width: 50px;
+    height: auto;
 }
