--- a/my-react-app/src/components/CSS/home.module.css
+++ b/my-react-app/src/components/CSS/home.module.css
@@ -15,6 +15,8 @@
 }
 
 .CategoryImage{
+    width: 15%;
+    height: auto;
     padding: 10px 15px
 }
 
@@ -24,6 +26,5 @@
 
 .Books {
     display: flex;
-    justify-content: space-evenly;
     margin: 0 10% 0;
 }
