--- a/my-react-app/src/components/CSS/book.module.css
+++ b/my-react-app/src/components/CSS/book.module.css
@@ -5,12 +5,14 @@
     padding: 30px 10px 20px;
     margin: 10px 20px 10px;
     align-items: center;
+    width: 70%;
+    height: auto;
 }
 .Books {
     margin: 0px 70px 0px;
 }
 .Book {
     display: flex;
-    width: 200px;
+    width: 50%;
     height: auto;
 }
