--- a/my-react-app/src/components/CSS/allocate-return.module.css
+++ b/my-react-app/src/components/CSS/allocate-return.module.css
@@ -1,69 +1,74 @@
 .formBody {
-    /* margin: 5% 0 0 5%; */
-    margin: 0;
-    height: 100vh;
     display: flex;
     justify-content: center;
-    font-size: 18px;
-    font: 500 1rem 'Outfit', sans-serif;
-    background-image: url("opaque-library-image.png");
+    height: 100vh;
     background-position: center;
     background-size: cover;
 }
 
-.formContainer {
-    width: 850px;
-    max-width: 850px;
+.formContainer{
+    width: 900px;
+    max-width: 900px;
     margin: 1rem;
     padding: 2rem;
 }
 
 .form {
-    padding: 2rem;
     background: rgb(242,242,242,1);
+    padding: 2rem;
     border-radius: 5px;
     border: 1.5px solid black;
+    position: relative;
 }
 
 .formTitle {
-    font-size: 2.5rem;
     text-align: center;
-}
-
-.instructions {
-    margin: 1rem 0;
-    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
 }
 
 .inputBlock {
-    margin: 1rem 0;
+    margin-bottom: 2rem;
+    font-size: 1rem;
+}
+
+.inputTitle {
+    font-size: 1.25rem;
 }
 
 .formInput {
     display: block;
-    width: 98%;
-    padding: 0.5rem;
-    border-radius: 8px;
-    border: 2px solid;
+    font-size: 1rem;
+    margin-top: 0.5rem;
+    height: 25px;
+    width: 40%;
+    padding: 0.25rem;
     outline: none;
-    font-size: 1.1rem;
     transition: border-color 0.2s;
+    border: 2px solid;
+    border-radius: 4px;
 }
 
 .formInput:focus {
     border-color: #1454ca;
 }
 
+.coverImage {
+    max-height: 300px;
+    position: absolute;
+    right: 100px;
+    top: 150px;
+}
+
 .buttonContainer {
-    text-align: right;
-    margin-bottom: 2rem;
+    padding-top: 10rem;
+    text-align: center;
 }
 
 .formButton {
-    width: 10rem;
-    justify-content: center;
+    width: 20%;
     text-align: center;
-    padding: 0.5rem;
+    padding: 0.3rem;
     border-radius: 6px;
     outline: none;
     border: 1px solid #1454ca;
@@ -73,11 +78,21 @@
 }
 
 .formButton:hover {
-    cursor: pointer;
     transition: 0.4s;
     transform: scale(1.1);
+    cursor: pointer;
 }
 
 .formButton:active {
     transform: scale(1);
+}
+
+.confirmButton {
+    position: relative;
+    right: 30%;
+}
+
+.cancelButton {
+    position: relative;
+    left: 30%;
 }
