fix link css for home page

--- a/my-react-app/src/components/CSS/book.module.css
+++ b/my-react-app/src/components/CSS/book.module.css
@@ -19,8 +19,13 @@
 }
 
 .Title {
-    width: 12vw;
+    width: 10vw;
     font-size: 20px;
     overflow-wrap: break-word;
     text-align: center;
+    text-decoration: none;
+    color: black;
+}
+a {
+    text-decoration: none;
 }
