--- a/my-react-app/src/components/CSS/forgotPassword.module.css
+++ b/my-react-app/src/components/CSS/forgotPassword.module.css
@@ -6,7 +6,7 @@
     justify-content: center;
     font-size: 18px;
     font: 500 1rem 'Outfit', sans-serif;
-    background-image: url("opaque-library-image.png");
+    background-image: url("../Images/opaque-library-image.png");
     background-position: center;
     background-size: cover;
 }
