--- a/my-react-app/src/components/CSS/login.module.css
+++ b/my-react-app/src/components/CSS/login.module.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     height: 100vh;
-    background-image: url("opaque-library-image.png");
+    background-image: url("../Images/opaque-library-image.png");
     background-position: center;
     background-size: cover;
 }
