--- a/myweb/templates/myapp/books/edit.html
+++ b/myweb/templates/myapp/books/edit.html
@@ -36,15 +36,23 @@
                <tr>
                 <td>Author: </td>
                 <td><input type="text" name="author" value="{{book.author}}"/></td>
-              </tr>
-
-              
-               <tr>
+                </tr>
+                <tr>
+                  <td>Description: </td>
+                  <td><input type="text" name="description" value="{{book.description}}"/></td>
+                </tr>
+                <tr>
+                  <td>Image: </td>
+                  <td><input type="file" name="image" value="{{book.image}}"/></td>
+                </tr>
+                </tr>
+                <tr>
+                  
                  <td colspan="2" align="center">
                     <input type="submit" value="Update"/>
                     <input type="reset" value="Reset"/>
                  </td>
-               </tr>
+                 </tr>
             </table>
             </form>
 
