--- a/myweb/templates/myapp/books/index.html
+++ b/myweb/templates/myapp/books/index.html
@@ -8,7 +8,7 @@
     <script>
         
         function doDel(uu){
-            if(confirm("确定要删除吗？")){
+            if(confirm("Are you sure to delete the book?")){
                 
                 window.location=uu;
             }
@@ -35,7 +35,9 @@
                 <th>ISBN</th>
                 <th>Genre</th>
                 <th>Author</th>
+                <th>Description</th>
                 
+                <th>Image</th>
                 <th>Time Added</th>
                 <th>Manage</th>
                 
@@ -47,7 +49,14 @@
                     <td>{{book.ISBN}}</td>
                     <td>{{book.genre}}</td>
                     <td>{{book.author}}</td>
+                    <td>{{book.description}}</td>
                     
+
+                    <td>
+                        {% if book.image %}
+                        <img src = "{{ book.image.url }}", width="100" >
+                        {% endif %}
+                    </td>
                     <td>{{book.addtime}}</td>
                     <td>
                         <a href="{% url 'editbooks' book.id %}">Edit</a>
