--- a/my-react-app/src/components/CSS/nav.module.css
+++ b/my-react-app/src/components/CSS/nav.module.css
@@ -1,20 +1,17 @@
 .name {
-    width: 300px;
-    height: 60px;
     margin-left: 30px;
+    font-size: 1.75rem;
 }
 
 .nav {
     background-color: white;
-    font: 500 1rem 'Outfit', sans-serif;
-    font-size: 20px;
+    font: 500 1.25rem 'Outfit', sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: solid black 2px;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: white;
-    font-size: 20px;
 }
 
 .links {
@@ -40,7 +37,7 @@
     border: none;
     padding-left: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .login {
