attemped to filter books in the category page, attempt failed, did some scuffed css tho and cleaned up category bar

--- a/my-react-app/src/components/CSS/categoryContainer.module.css
+++ b/my-react-app/src/components/CSS/categoryContainer.module.css
@@ -1,3 +1,23 @@
 .CategoryContainerItems {
+    height: 70vh;
+    width: 50vw;
     list-style: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-x: hidden; 
+    overflow-y: auto;
+    scroll-behavior: smooth;
+}
+
+.CategoryContainerItems::-webkit-scrollbar {
+    display: none;
+}
+
+.Arrows {
+    text-align: center;
+}
+
+.ArrowsAndBooks {
+    display: flex;
+    flex-direction: column;
 }
