--- a/my-react-app/src/components/CSS/categoryPage.module.css
+++ b/my-react-app/src/components/CSS/categoryPage.module.css
@@ -1,6 +1,4 @@
 .CategoryContainer {
-    width: 50vw;
-    height: 90vh;
-    float: right;
-    margin-right: 10%;
+    margin: 100px 100px 100px;
 }
+
