--- a/myobject/templates/myadmin/index/index.html
+++ b/myobject/templates/myadmin/index/index.html
@@ -4,8 +4,8 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    首页
-    <small>订餐系统后台管理</small>
+    Home page
+    <small>Library management system</small>
   </h1>
   <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
@@ -24,12 +24,12 @@
         <div class="inner">
           <h3>150</h3>
 
-          <p>新订单</p>
+          <p>New oder</p>
         </div>
         <div class="icon">
           <i class="ion ion-bag"></i>
         </div>
-        <a href="#" class="small-box-footer">更多信息 <i class="fa fa-arrow-circle-right"></i></a>
+        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div>
     <!-- ./col -->
@@ -44,7 +44,7 @@
         <div class="icon">
           <i class="ion ion-stats-bars"></i>
         </div>
-        <a href="#" class="small-box-footer">更多信息 <i class="fa fa-arrow-circle-right"></i></a>
+        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div>
     <!-- ./col -->
@@ -54,12 +54,12 @@
         <div class="inner">
           <h3>44</h3>
 
-          <p>用户注册</p>
+          <p>User registeration</p>
         </div>
         <div class="icon">
           <i class="ion ion-person-add"></i>
         </div>
-        <a href="#" class="small-box-footer">更多信息 <i class="fa fa-arrow-circle-right"></i></a>
+        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div>
     <!-- ./col -->
