--- a/myobject/templates/myadmin/user/index.html
+++ b/myobject/templates/myadmin/user/index.html
@@ -5,11 +5,11 @@
  <section class="content-header">
     <h1>
       Employee management
-      <small>订餐系统后台管理</small>
+      <small>Library management system</small>
     </h1>
     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> 首页</a></li>
-      <li class="active">员工管理</li>
+      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+      <li class="active">Employee management</li>
     </ol>
   </section>
 
@@ -20,12 +20,12 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title">员工信息表</h3>
+            <h3 class="box-title">Employee info</h3>
 
             <div class="box-tools">
                 <form action="{% url 'myadmin_user_index' 1 %}" method="get">
                     <div class="input-group input-group-sm" style="width:150px;">
-                      <input type="text" name="keyword" class="form-control pull-right" placeholder="账号/昵称">
+                      <input type="text" name="keyword" class="form-control pull-right" placeholder="username/nickname">
     
                       <div class="input-group-btn">
                         <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
@@ -67,12 +67,10 @@
                 <td>{{ vo.create_at|date:'Y-m-d H:i:s' }}</td>
                 <td>{{ vo.update_at|date:'Y-m-d H:i:s' }}</td>
                 <td>
-                  <button type="button" class="btn btn-success btn-xs">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 编辑</button>
-                  <button type="button" class="btn btn-danger btn-xs">
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 删除</button>
-                  <button type="button" class="btn btn-warning btn-xs">
-                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span> 查看订单</button>
+                  <a type="button" href="{% url 'myadmin_user_edit' vo.id %}" class="btn btn-success btn-xs">
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a>
+                  <a type="button" href="{% url 'myadmin_user_delete' vo.id %}" class="btn btn-danger btn-xs">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</a>
                 </td>
               </tr>
               {% endfor %}
@@ -80,15 +78,15 @@
           </div>
           <!-- /.box-body -->
           <div class="box-footer clearfix">
-            <a role="button" href="add.html" class="btn btn-primary">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 添加员工</a>
+            <a role="button" href="{% url 'myadmin_user_add' %}" class="btn btn-primary">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add employee</a>
             <ul class="pagination pagination-sm no-margin pull-right">
-              <li><a href="{% url 'myadmin_user_index' pIndex|add:-1 %}">&laquo;</a></li>
+              <li><a href="{% url 'myadmin_user_index' pIndex|add:-1 %}?{{mywhere|join:'&'}}">&laquo;</a></li>
               {% for p in plist %}
-              <li {% if p == pIndex %}class="active"{% endif %}><a href="{% url 'myadmin_user_index' p %}">{{p}}</a></li>
+              <li {% if p == pIndex %}class="active"{% endif %}><a href="{% url 'myadmin_user_index' p %}?{{mywhere|join:'&'}}">{{p}}</a></li>
               {% endfor %}
 
-              <li><a href="{% url 'myadmin_user_index' pIndex|add:1 %}">&raquo;</a></li>
+              <li><a href="{% url 'myadmin_user_index' pIndex|add:1 %}?{{mywhere|join:'&'}}">&raquo;</a></li>
             </ul>
           </div>
         </div>
