--- a/myobject_xan/templates/myadmin/category/index.html
+++ b/myobject_xan/templates/myadmin/category/index.html
@@ -60,9 +60,9 @@
                   
                   <td>
                     {% if vo.image %}
-                    <img src = "{{ book.image.url }}", width="100" >
+                    <img src = "{{ category.image.url }}", width="100" >
                     {% endif %}
-                </td>
+                  </td>
                   <td>
                     {% if vo.status == 1 %}
                       <span style="color:green">正常</span>
