--- a/myobject_xan/templates/myadmin/category/add.html
+++ b/myobject_xan/templates/myadmin/category/add.html
@@ -39,35 +39,35 @@
                   <label for="inputEmail3" class="col-sm-2 control-label">ISBN：</label>
 
                   <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" id="inputText2" placeholder="ISBN" />
+                    <input type="text" name="ISBN" class="form-control" id="inputText2" placeholder="ISBN" />
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-2 control-label">Genre：</label>
 
                   <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" id="inputText2" placeholder="genre" />
+                    <input type="text" name="genre" class="form-control" id="inputText2" placeholder="genre" />
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-2 control-label">Author：</label>
 
                   <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" id="inputText2" placeholder="author" />
+                    <input type="text" name="author" class="form-control" id="inputText2" placeholder="author" />
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-2 control-label">Description：</label>
 
                   <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" id="inputText2" placeholder="description" />
+                    <input type="text" name="description" class="form-control" id="inputText2" placeholder="description" />
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-2 control-label">Image：</label>
 
                   <div class="col-sm-4">
-                    <input type="file" name="name" class="form-control" id="inputText2" placeholder="image" />
+                    <input type="file" name="image" class="form-control" id="inputText2" placeholder="image" />
                   </div>
                 </div>
               </div>
