--- a/myobject_xan/templates/myadmin/category/index.html
+++ b/myobject_xan/templates/myadmin/category/index.html
@@ -23,13 +23,15 @@
               <h3 class="box-title"><i class="fa fa-calendar"></i> 菜品分类信息表</h3>
 
               <div class="box-tools">
-                <div class="input-group input-group-sm" style="width: 150px;">
-                  <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+                <form action="{% url 'myadmin_category_index' 1 %}" method ="get">
+                  <div class="input-group input-group-sm" style="width: 150px;">
+                    <input type="text" name="table_search" class="form-control pull-right" placeholder="Name/Genre/Author">
 
-                  <div class="input-group-btn">
-                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                    <div class="input-group-btn">
+                      <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                    </div>
                   </div>
-                </div>
+                </form>
               </div>
             </div>
             <!-- /.box-header -->
@@ -60,7 +62,7 @@
                   
                   <td>
                     {% if vo.image %}
-                    <img src = "{{ category.image.url }}", width="100" >
+                    <img src = "{{ vo.image.url }}", width="100" >
                     {% endif %}
                   </td>
                   <td>
