--- a/myobject_xan/templates/myadmin/category/index.html
+++ b/myobject_xan/templates/myadmin/category/index.html
@@ -25,7 +25,7 @@
               <div class="box-tools">
                 <form action="{% url 'myadmin_category_index' 1 %}" method ="get">
                   <div class="input-group input-group-sm" style="width: 150px;">
-                    <input type="text" name="table_search" class="form-control pull-right" placeholder="Name/Genre/Author">
+                    <input type="text" name="keyword" class="form-control pull-right" placeholder="Name/Genre/Author">
 
                     <div class="input-group-btn">
                       <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
