--- a/myobject/templates/myadmin/base.html
+++ b/myobject/templates/myadmin/base.html
@@ -212,7 +212,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="category.html"> <i class="fa fa-circle-o"></i> Book category</a></li>
+            <li><a href="{% url 'myadmin_category_index' 1 %}"> <i class="fa fa-circle-o"></i> Book category</a></li>
             <li><a href="product.html"> <i class="fa fa-circle-o"></i> Book info</a></li>
           </ul>
         </li>
