--- a/client/signupStyle.css
+++ b/client/signupStyle.css
@@ -33,8 +33,8 @@ h1 {
     text-align: center;
 }
 
-Label{  
-    color: black;  
+Label {
+    color: black;
     font-size: 17px;
 }
 
@@ -55,15 +55,15 @@ Label{
 }
 
 input {
-    width: 350px;  
-    height: 30px;  
-    border: 1px solid black;  
-    border-radius: 10px; 
-    padding-left: 8px; 
+    width: 350px;
+    height: 30px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding-left: 8px;
 }
 
 input:focus {
-    outline-color: rgb(32,177,255);
+    outline-color: rgb(32, 177, 255);
 }
 
 input[id=signupButton] {
